--- a/express_mysql/views/index.ejs
+++ b/express_mysql/views/index.ejs
@@ -8,13 +8,15 @@
     <p><a href="/create">ユーザ追加</a></p>
     <table>
         <tr>
+            <th>Id</th>
             <th>名前</th>
-            <th>email</th>
+            <th>Email</th>
             <th>更新</th>
             <th>削除</th>
         </tr>
         <% users.forEach(function (value) { %>
         <tr>
+            <td><%= value.id %></td>
             <td><%= value.name %></td>
             <td><%= value.email %></td>
             <td><a href="/edit/<%= value.id %>">更新</a></td>
