--- a/frontend/src/components/Layout/Navigation.css
+++ b/frontend/src/components/Layout/Navigation.css
@@ -1,17 +1,10 @@
-.sidebar_item {    
-  display: block;
-   width: 50px;
-   height: 50px;   	
-   margin-top: 20px;   
-}
-
 nav ul  {
 position: relative;
 display: block;
 }
 
 h1{
- padding-left: 300px;
  text-decoration: none;
- color: white;
+ color: black;
+ text-align: center;
 }
