--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -15,17 +15,17 @@ code {
 * {
   margin: 0;
   padding: 0;
-  font-family: montserrat, sans-serif;
 }
 
-input, button {
+
+#login-page #login-pages input, button {
   appearance: none;
   background: none;
   border: none;
   outline: none;
 }
 
-.App {
+#login-page #login-pages .App {
   height: 100vh;
   display: flex;
   align-items: center;
@@ -33,12 +33,12 @@ input, button {
   background-color: #53565A;
 }
 
-form {
+#login-page #login-pages form {
   display: block;
   position: relative;
 } 
 
-form:after {
+#login-page #login-pages form:after {
   content: '';
   display: block;
   position:  absolute;
@@ -50,7 +50,7 @@ form:after {
   background-image: linear-gradient(to bottom right, #FFCE00, #FE4880);
 }
 
-form .form-inner {
+#login-page #login-pages form .form-inner {
   position: relative;
   display: block;
   background-color: #FFF;
@@ -58,20 +58,20 @@ form .form-inner {
   z-index: 2;
 }
 
-form .form-inner h2 {
+#login-page #login-pages form .form-inner h2 {
   color: #888;
   font-size: 28px;
   font-weight: 500;
   margin-bottom: 30px;
 }
 
-form .form-inner .form-group {
+#login-page #login-pages form .form-inner .form-group {
   display: block;
   width: 300px;
   margin-bottom: 15px;
 }
 
-.form-inner .form-group label {
+#login-page #login-pages .form-inner .form-group label {
   display: block;
   color: #666;
   font-size: 12px;
@@ -79,11 +79,11 @@ form .form-inner .form-group {
   transition: 0.4s;
 }
 
-.form-inner .form-group:focus-within label {
+#login-page #login-pages .form-inner .form-group:focus-within label {
   color: #FE4880;
 }
 
-form .form-inner .form-group input {
+#login-page #login-pages form .form-inner .form-group input {
   display: block;
   width: 100%;
   padding:  10px 15px;
@@ -92,11 +92,11 @@ form .form-inner .form-group input {
   transition: 0.4s;
 }
 
-form .form-inner .form-group input:focus {
+#login-page #login-pages form .form-inner .form-group input:focus {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
-form .form-inner input[type="submit"],
+#login-page #login-pages form .form-inner input[type="submit"],
 .welcome button {
   display: inline-block;
   padding: 10px 15px;
@@ -110,26 +110,26 @@ form .form-inner input[type="submit"],
   cursor: pointer;
 }
 
-form .form-inner input[type="submit"]:hover,
+#login-page #login-pages form .form-inner input[type="submit"]:hover,
 .welcome button:hover {
   background-position: 100% 0%;
 }
 
-.welcome {
+#login-page #login-pages .welcome {
   width: 100%;
   max-width: 480px;
   background-color: #fff;
   padding: 15px 30px;
 }
 
-.welcome h2 {
+#login-page #login-pages .welcome h2 {
   color: #888;
   font-size: 28px;
   font-weight: 500;
   margin-bottom: 30px;
 }
 
-.welcome h2 span {
+#login-page #login-pages .welcome h2 span {
   color: #FE4880;
   font-weight: 700;
-}
+} 
