--- a/express_mysql/views/edit.ejs
+++ b/express_mysql/views/edit.ejs
@@ -9,6 +9,7 @@
     <form action="/update/<%= user[0].id %>" method="POST">
         name <input type="text" name="name" value="<%= user[0].name %>"><br>
         email <input type="text" name="email" value="<%= user[0].email %>"><br>
+        password <input type="text" name="password" value="<%= user[0].password %>"><br>
         <button type="submit">更新</button>
     </form>    
 </body>
