--- a/express_mysql/views/index.ejs
+++ b/express_mysql/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>User list</title>
+    <title>ユーザリスト</title>
 </head>
 <body>
     <p><a href="/create">ユーザ追加</a></p>
@@ -11,6 +11,7 @@
             <th>Id</th>
             <th>名前</th>
             <th>Email</th>
+            <th>パスワード</th>
             <th>更新</th>
             <th>削除</th>
         </tr>
@@ -19,6 +20,7 @@
             <td><%= value.id %></td>
             <td><%= value.name %></td>
             <td><%= value.email %></td>
+            <td><%= value.password %></td>
             <td><a href="/edit/<%= value.id %>">更新</a></td>
             <td><a href="/delete/<%= value.id %>">削除</a></td>
         </tr>
